--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="heading__text">Book Tracker</p>
         </aside>
         <section class="list">
-            <article class="book">
+            <!-- <article class="book">
                 <img class="book__img" src="https://m.media-amazon.com/images/I/71034vbR6rL._AC_UF1000,1000_QL80_.jpg" alt="Burn Book cover">
                 <div class="book__content">
                     <p class="book__title">Burn Book</p>
@@ -24,19 +24,20 @@
                     <p class="book__price">$19.99</p>
                 </div>
                 <i class="book__icon fa-regular fa-trash-can"></i>
-            </article>
+            </article> -->
         </section>
         <section class="form">
-            <form action="post" method="post" target="self">
-                <input class="form__title input-block field" type="text" name="title" placeholder="Title" required>
-                <input class="form__author input-block field" type="text" name="author" placeholder="Author" required>
-                <input class="form__image input-block field" type="url" name="url"   placeholder="Image URL" required>
-                <input class="form__price input-block field" type="text" name="price"  pattern="[0-9]{1,}\.[0-9]{2}" placeholder="Price" required>
+            <form action="post" method="post" target="self" >
+                <input class="form__title input-block field placeholders" type="text" name="title" placeholder="Title" required>
+                <input class="form__author input-block field placeholders" type="text" name="author" placeholder="Author" required>
+                <input class="form__image input-block field placeholders" type="url" name="url"  pattern="[^']+\.[?:jpg|jpeg|gif|png]" placeholder="Image URL" >
+                <input class="form__price input-block field placeholders" type="text" name="price"  pattern="[0-9]{1,}\.[0-9]{2}" placeholder="Price" required>
                 <select class="form__stock input-block field" name="stock" >
                         <option value="In" selected>In Stock</option>
                         <option value="Out">Out of Stock</option>
                 </select>
                 <input class="form__submit field" type="button" name="submit" value="Add Book">
+                <span class="form__error"></span>
             </form>
         </section>
     </main>   
