--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Tracker</title>
+    <title>Book Shelf</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://kit.fontawesome.com/2c37932ce3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
         <aside class="heading">
-            <p class="heading__text">Book Tracker</p>
+            <p class="heading__text">Book Shelf</p>
         </aside>
         <section class="list">
             <!-- <article class="book">
